--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "vercel": "^49.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
